kubernetes/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ${SERVICE_NAME}
spec:
  hosts:
  - "*"
  gateways:
  - frontend-gateway
  http:
  - match:
    - uri:
        prefix: "/frontend/"
    rewrite:
      uri: "/"
    route:
    - destination:
        host: ${SERVICE_NAME}
        port:
          number: 80
